# mcp-tts-copilot-summary

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: agent-instruction.md  mcp.json  smoke-calls.json
src/mcp_tts_copilot_summary/: __init__.py  config.py  main.py  tools.py
src/mcp_tts_copilot_summary/tts/: __init__.py  sapi.py
tests/: test_threshold_logic.py  test_tool_contract.py  test_voice_fallback.py
